<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="16dp"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        app:srcCompat="@drawable/logo"
        android:layout_marginStart="40dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="40dp"/>

    <TextView
        android:id="@+id/hello"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/comfortaa_medium"
        android:gravity="center"
        android:text="@string/hello"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:layout_marginTop="-20dp"
        app:layout_constraintTop_toBottomOf="@id/logo" />

    <TextView
        android:id="@+id/descrip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/comfortaa_medium"
        android:gravity="center"
        android:text="@string/description"
        android:textColor="@color/gray"
        android:textSize="14sp"
        android:layout_marginTop="-5dp"
        app:layout_constraintTop_toBottomOf="@id/hello"/>

    <Button
        android:id="@+id/tPhoto_bt"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="7dp"
        android:background="@drawable/btns"
        android:fontFamily="@font/comfortaa_medium"
        android:gravity="center"
        android:text="@string/take_a_photo"
        android:textColor="@color/black"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@id/guide_bt"
        app:layout_constraintEnd_toStartOf="@id/slPhoto_bt"
        app:layout_constraintHeight_percent="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/descrip"
        app:layout_constraintWidth_percent="0.47" />

    <Button
        android:id="@+id/slPhoto_bt"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="70dp"
        android:layout_marginStart="7dp"
        android:background="@drawable/btns"
        android:fontFamily="@font/comfortaa_medium"
        android:gravity="center"
        android:text="@string/slPhoto"
        android:textColor="@color/black"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/descrip"
        app:layout_constraintBottom_toTopOf="@id/guide_bt"
        app:layout_constraintStart_toEndOf="@id/tPhoto_bt"
        android:layout_marginBottom="5dp"
        app:layout_constraintWidth_percent="0.47"
        app:layout_constraintHeight_percent="0.08"/>

    <Button
        android:id="@+id/guide_bt"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/btns"
        android:fontFamily="@font/comfortaa_medium"
        android:gravity="center"
        android:text="@string/guide"
        android:textColor="@color/black"
        android:textSize="13sp"
        app:layout_constraintTop_toBottomOf="@id/tPhoto_bt"
        app:layout_constraintBottom_toTopOf="@id/set_bt"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        app:layout_constraintHeight_percent="0.08" />

    <Button
        android:id="@+id/set_bt"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/btns"
        android:fontFamily="@font/comfortaa_medium"
        android:gravity="center"
        android:text="@string/settings"
        android:textColor="@color/black"
        android:textSize="13sp"
        app:layout_constraintTop_toBottomOf="@id/guide_bt"
        android:layout_marginTop="5dp"
        app:layout_constraintHeight_percent="0.08" />
</androidx.constraintlayout.widget.ConstraintLayout>
